js/js.translator/testData/incremental/invalidation/inlineFunSameLibRemoveFunctions/lib1/l2.0.kt
fun compute(): Int = timesTwo(plusOne(20))
